kubernetes/apps/apps/bifrost/bifrost/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bifrost
  labels:
    app: bifrost
spec:
  type: ClusterIP
  selector:
    app: bifrost
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
