kubernetes/apps/apps/bifrost/bifrost/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bifrost
spec:
  parentRefs:
    - name: traefik
      namespace: networking
      sectionName: websecure-cloud
  hostnames:
    - bifrost.cloud.traunseenet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bifrost
          port: 8080
