kubernetes/apps/apps/bifrost/bifrost/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - bifrost.cloud.traunseenet.com
      secretName: bifrost-cert
  ingressClassName: traefik
  rules:
    - host: bifrost.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bifrost
                port:
                  name: http
